TEST_PROGRAMS/INVALID/14/0701_nested_block_comment.go
/* This is a nested /* block comment */. It รง should fails */

